tests/errors/wrong_type_usage/const_variation.meth
int x = 20;
log other = false;

while (x < 30 | other) {
    x = x + 5;
    if (x > 58) {
        other = true;
    }
}

const int c = x;